# Advent2024C

./: .gitattributes  1.c  2.c  2.h  3.c  3.h  4.c  4.h  5.c  6.c  6.h  6_parallel.c  6_parallel.h  7.c  8.c  8.h  CMakeLists.txt  dumb_lil_threadpool.c  dumb_lil_threadpool.h  eight.c  eight.h  file-utils.h  five.c  five.h  four.c  four.h  main.c  one.c  one.h  seven.c  seven.h  shared.h  six.c  six.h  thpool.c  thpool.h  three.c  three.h  two.c  two.h
python/: 2.py  find_magic_number.py
